add columns in types of pizza.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
   <div class="pitzar"></div>
   <div class="container">
       <div class="row">
+        <div class="col-md-4">
         <div class="vegt">
         <img src="/images/VEG TIKKA.jpg" alt="vegtikka">
         </div>
+        </div>
+        <div class="col-md-4"></div>
         <div class="chickticka">
         <img src="/images/cicken tikka.jpg" alt="chickenticka"></div>
+        <div class="col-md-4">
         <div class="hawaiick">
         <img src="/images/hawaii chicken .jpg" alt="hawaii"></div>
+        </div>
 
 
         
