--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <nav>
         <div class="logo">
-          <a href="index.html"><img src="/images/pitzstar.png" alt="pitzstar logo"></a>
+          <a href="index.html"><img src="images/pitzstar.png" alt="pitzstar logo"></a>
         </div>
         <div class="title">
           <h1>pitzstar</h1>
